--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Application related
 config.json
 
+# Certificates
+*.csr
+*.crt
+*.key
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
